--- a/assets/templates/edit-contact.html
+++ b/assets/templates/edit-contact.html
@@ -74,7 +74,7 @@
             />
           </div>
           <div class="contact-dialog-form-buttons">
-            <button type="button" class="btn delete">Delete</button>
+            <button id="delete-button-edit-contacts" type="button" class="btn delete">Delete</button>
             <button type="submit" class="btn save button-hover-light-blue-background">Save ✓</button>
           </div>
         </form>
