--- a/styles/add-task.css
+++ b/styles/add-task.css
@@ -21,3 +21,18 @@
     display: flex;
     flex-direction: column;
 }
+
+.required-symbol{
+    color: rgb(255,129,144);
+
+}
+
+.add-task-form-container label{
+    font-size: 20px;
+    line-height: 24px;
+    font-weight: 400;
+}
+
+input[id=title]{
+    color: rgb(17, 88, 150);
+}
