--- a/styles/board.css
+++ b/styles/board.css
@@ -209,26 +209,36 @@
   align-items: center;
 }
 
+.user-info-inits{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  color: white;
+  font-size: 47px;
+  font-weight: 500;
+  line-height: 56.4px;
+  width: 120px;
+  height: 120px;
+  border-radius: 50%;
+}
+
 .board-task-profile-batch {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  color: #fff;
+  font-size: 12px;
   width: 32px;
   height: 32px;
   border: 2px solid #fff;
   border-radius: 50%;
   z-index: 0;
+  margin-left: -7px;
 }
 
 .board-task-profile-batch:nth-child(1) {
-  z-index: 1;
-}
-
-.board-task-profile-batch:nth-child(2) {
-  z-index: 2;
-  margin-left: -10px;
-}
-
-.board-task-profile-batch:nth-child(3) {
-  z-index: 3;
-  margin-left: -10px;
+  z-index: 0 !important;
+  margin-left: 0 !important; 
 }
 
 .board-task-priority {
