--- a/style.css
+++ b/style.css
@@ -74,7 +74,8 @@ button:hover {
   display: flex;
   margin: 0 auto;
   max-width: 1440px;
-  height: 1024px;
+  height: 100vh;
+  /* height: 1024px; */
 }
 
 .menu-content {
