--- a/styles/dialog.css
+++ b/styles/dialog.css
@@ -272,6 +272,13 @@ input:focus {
   font-weight: 700;
 }
 
+.btn-create:hover {
+  border: 2px solid #29abe2;
+  filter: blur(0px 0px 4px #29abe2);
+  box-shadow: 0 5px 5px rgba(0, 0, 0, 0.3);
+  background-color: #29abe2;
+}
+
 .two-btn {
   margin-right: 3.4rem;
 }
