--- a/styles/summery.css
+++ b/styles/summery.css
@@ -35,6 +35,7 @@
     align-items: center;
     gap: 20px;
     margin-top: 4rem;
+    margin-left: 3rem;
 }
 
 .summary-to-do {
@@ -159,6 +160,7 @@
     display: flex;
     align-items: center;
     gap: 18px;
+    width: 76%;
 }
 
 .urgent-text {
@@ -190,7 +192,7 @@
 }
 
 .vector-urgent {
-    padding-left: 30px;
+    padding-left: 29px;
 }
 
 .urgent-right-text {
@@ -287,7 +289,7 @@ h3:hover {
 .greet {
     width: 385px;
     height: 136px;
-    left: 42rem;
+    left: 44rem;
     position: relative;
     bottom: 22.5rem;
 }
