--- a/assets/templates/add-contact.html
+++ b/assets/templates/add-contact.html
@@ -1,4 +1,4 @@
-<div class="overlay">
+<div id="addContact" class="overlay">
   <div class="contact-dialog">
     <button class="close-button" onclick="closeAddContact()">
       <img src="../assets/img/close-button.svg" alt="" />
@@ -22,7 +22,7 @@
       </div>
       <form class="contact-form">
         <div class="input-group">
-          <input class="input-form" type="text" placeholder="Name" required/>
+          <input id="addContactName" class="input-form" type="text" placeholder="Name" required/>
           <img
             class="input-icon"
             src="../assets//img/person-form-icon.svg"
@@ -30,7 +30,7 @@
           />
         </div>
         <div class="input-group">
-          <input class="input-form" type="email" placeholder="Email" required/>
+          <input id="addContactMail" class="input-form" type="email" placeholder="Email" required/>
           <img
             class="input-icon"
             src="../assets//img/mail-form-icon.svg"
@@ -38,7 +38,7 @@
           />
         </div>
         <div class="input-group">
-          <input class="input-form" type="tel" placeholder="Phone" required/>
+          <input id="addContactPhone" class="input-form" type="tel" placeholder="Phone" required/>
           <img
             class="input-icon"
             src="../assets//img/phone-form-icon.svg"
@@ -49,7 +49,7 @@
           <button type="button" class="btn-cancel" onclick="closeAddContact()">
             Cancel X
           </button>
-          <button type="submit" class="btn-create" onclick="createContact()">Create contact ✓</button>
+          <button type="button" class="btn-create" onclick="createContact()">Create contact ✓</button>
         </div>
       </form>
     </div>
