--- a/styles/summery.css
+++ b/styles/summery.css
@@ -104,7 +104,7 @@
     font-family: "Inter";
     position: relative;
     bottom: 28px;
-    color:#2A3647;
+    display: flex;
 }
 
 .summary-to-do-right {
@@ -282,9 +282,9 @@ p:hover {
     color: white;
 }
 
-/* h3:hover {
-    color: white;
-} */
+h3 {
+    color: #2A3647;
+}
 
 .greet {
     width: 385px;
