prio buttons done

--- a/styles/add-task.css
+++ b/styles/add-task.css
@@ -109,3 +109,12 @@ form{
     display: flex;
     align-items: center;
 }
+
+.color-white{
+    color: white;
+}
+
+.fill-color-white{
+    fill: white
+}
+
