--- a/style.css
+++ b/style.css
@@ -12,6 +12,7 @@
 
 body {
   margin: 0;
+  overflow: hidden;
 }
 
 h1 {
@@ -188,6 +189,7 @@ button:hover {
   background-color: #f6f7f8;
   height: calc(100% - 56px);
   overflow-x: hidden;
+  overflow-y: hidden;
 }
 
 .contact-main {
