--- a/styles/summery.css
+++ b/styles/summery.css
@@ -64,7 +64,11 @@
     background-color: #2A3647;
     transform: scale(1.05);
     transition: transform 0.3s ease; 
-    color: white !important;
+    color: white;
+}
+
+.summary-to-do-left:hover h2 {
+    color: white;
 }
 
 .summary-to-do-left:hover h3 {
@@ -107,6 +111,7 @@
     text-align: center;
     top: 22px;
     position: relative;
+    color: black;
 }
 
 .summary-left-text h3 {
@@ -117,6 +122,7 @@
     position: relative;
     bottom: 28px;
     display: flex;
+    color: #2A3647;
 }
 
 .summary-to-do-right {
@@ -137,6 +143,10 @@
     background-color: #2A3647;
     transform: scale(1.05);
     transition: transform 0.3s ease; 
+    color: white;
+}
+
+.summary-to-do-right:hover h2 {
     color: white;
 }
 
@@ -179,6 +189,10 @@
     cursor: pointer;
 }
 
+.summary-urgent:hover h2 {
+    color: white;
+}
+
 .summary-urgent:hover h3 {
     color: white;
 }
@@ -206,6 +220,7 @@
    line-height: 76.8px;
    font-family: "Inter";
    font-weight: 600;
+   color: black;
 }
 
 .urgent-text h3 {
@@ -286,6 +301,7 @@
     font-family: "Inter";
     font-weight: 600;
     line-height: 76.8px;
+    color: black;
 }
 
 .tasks-board p {
@@ -304,6 +320,10 @@
     transition: transform 0.3s ease; 
     color: white;
     cursor: pointer;
+}
+
+.tasks-board:hover h2 {
+    color: white;
 }
 
 .tasks-board:hover p {
