--- a/styles/add-task.css
+++ b/styles/add-task.css
@@ -10,7 +10,7 @@
 .first-form{
     display: flex;
     flex-direction: column;
-    gap: 16px;
+    gap: 32px;
 }
 .first-form>div{
     display: flex;
@@ -31,7 +31,7 @@
 .second-form{
     display: flex;
     flex-direction: column;
-   
+    gap: 32px;
 }
 
 .second-form>div{
@@ -111,6 +111,73 @@ input[type=date]{
     justify-content: space-between;
     align-items: center;
     border-radius: 10px;
+    position: relative;
+    cursor: pointer;
+    z-index: 5;
+}
+
+.assign-selector:hover{
+    box-shadow: 2px 2px 4px 0px #0000001A;
+}
+
+.default-option{
+    font-size: 20px;
+    font-weight: 400;
+    line-height: 24px;
+}
+
+.assign-options{
+    width: 440px;
+    height: 290px;
+    position: absolute;
+    z-index: 3;
+    background-color: white;
+    top: calc(0% + 49px);
+    left: 0;
+    border-radius: 0 0 10px 10px;
+    overflow-y: scroll;
+}
+
+.assign-default-option{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    width: 100%;
+}
+
+.drowdown-arrow{
+    display: flex;
+    align-items: center;
+}
+
+.rendered-options-container{
+    display: flex;
+    justify-content: space-between;
+    padding: 10px 12px;
+    border-radius: 10px;
+}
+
+.rendered-options-container:hover{
+    background-color: rgb(0, 0, 0, 0.1);
+}
+
+.rendered-option{
+    display: flex;
+    align-items: center;
+    gap: 12px;
+}
+
+.assign-initials{
+    display: inline-flex;
+    align-items: center;
+    justify-content: center;
+    padding: 8px;
+    width: 40px;
+    height: 40px;
+    border-radius: 45px;
+    border: 2px solid white;
+    color: white;
+    font-size: 12px;
 }
 
 select{
@@ -283,3 +350,4 @@ line-height: 24px;
     width: 30px;
     height: 30px;
 }
+
