--- a/style.css
+++ b/style.css
@@ -12,7 +12,7 @@
 
 body {
   margin: 0;
-  overflow: hidden;
+  overflow-x: hidden;
 }
 
 h1 {
@@ -75,7 +75,7 @@ button:hover {
   display: flex;
   margin: 0 auto;
   max-width: 1440px;
-  /* height: 1024px; */
+  height: 1024px; 
 }
 
 .menu-content {
