--- a/styles/add-task.css
+++ b/styles/add-task.css
@@ -407,12 +407,6 @@ line-height: 24px;
     
 }
 
-.subtasks-container{
-    position: relative;
-    display: flex;
-    justify-content: space-between;
-}
-
 .task-added{
     font-size: 20px;
     line-height: 24px;
@@ -445,3 +439,37 @@ line-height: 24px;
     height: 30px;
 }
 
+.subtasks-container{
+    display: flex;
+    flex-direction: column;
+}
+
+.subtask-options{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.assign-options-container ul{
+    margin-block-start: 0;
+    margin-block-end: 0;
+}
+
+.subtask-options-img{
+    display: flex;
+    gap: 4px;
+}
+
+.subtask-options-img img{
+    width: 20px;
+    height: 20px;
+}
+
+.assign-options-container li:hover{
+    background-color: #0000001A;
+}
+
+.assign-options-container li{
+   list-style-position: inside;
+   background-color: rgb(98, 134, 167);
+}
