--- a/styles/board.css
+++ b/styles/board.css
@@ -2,7 +2,6 @@
   opacity: 0.6;
   transform: rotate(2deg);
   transition: transform 0.2s ease, opacity 0.2s ease;
-  cursor: grabbing;
 }
 
 .board-padding {
@@ -105,14 +104,15 @@
   flex-direction: column;
   height: 100%;
   gap: 16px;
-
+  border-radius: 24px;
   border: 1px solid transparent;
   transition: border 0.2s ease, background-color 0.2s ease;
 }
 
 .board-list-content.highlight {
-  border: 2px dashed #007bff; /* Blaue gestrichelte Linie */
-  background-color: rgba(0, 123, 255, 0.1); /* Leicht blauer Hintergrund */
+  border: 2px dashed #29abe2; 
+  background-color: rgba(0, 123, 255, 0.1);
+  overflow: hidden;
 }
 
 .btn-board-add-task {
@@ -128,6 +128,10 @@
 
 .btn-board-add-task:hover {
   border: 2px solid #29abe2;
+}
+
+.btn-board-add-task:hover path {
+  stroke: #29abe2;
 }
 
 .board-list-header {
@@ -156,6 +160,11 @@
   gap: 24px;
   cursor: pointer;
   box-shadow: 0px 0px 10px 3px #00000014;
+  transition: background-color 0.2s ease;
+}
+
+.board-task:hover {
+  background-color: #e8e8e889;
 }
 
 .board-task-label {
