--- a/styles/add-task.css
+++ b/styles/add-task.css
@@ -128,6 +128,7 @@ input[type=date]{
     justify-content: space-between;
     align-items: center;
     border-radius: 10px;
+    position: relative;
 }
 
 .assign-selector:hover{
@@ -442,6 +443,12 @@ line-height: 24px;
 .subtasks-container{
     display: flex;
     flex-direction: column;
+    justify-content: center;
+    gap: 8px;
+    position: absolute;
+    width: 440px;
+    left: 0;
+    top: calc(0% + 51px);
 }
 
 .subtask-options{
@@ -465,11 +472,17 @@ line-height: 24px;
     height: 20px;
 }
 
-.assign-options-container li:hover{
-    background-color: #0000001A;
+.subtask-options-img img:hover{
+    transform: scale(1.1);
 }
 
-.assign-options-container li{
-   list-style-position: inside;
-   background-color: rgb(98, 134, 167);
+.subtasks-container ul{
+    padding-top: 4px;
+    padding-bottom: 4px;
+    padding-right: 20px;
+    border-radius: 10px;
+}
+
+.subtask-option-text{
+    outline: none;
 }
