--- a/styles/edit-task.css
+++ b/styles/edit-task.css
@@ -44,6 +44,7 @@ ul {
 .dialog-edit-task {
   /* position: relative; */
   width: 525px;
+  height: 90%;
   background-color: #fff;
   border-radius: 30px;
   padding: 48px 16px 48px 40px;
