--- a/styles/board.css
+++ b/styles/board.css
@@ -279,3 +279,23 @@
   height: 12px;
   width: 17px;
 }
+
+.overlay-placeholder{
+  position: absolute;
+  z-index: 100;
+  height: 100vh;
+  width: 100%;
+  
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.overlay-content{
+  display: flex;
+  justify-content: center;
+  width: 70%;
+  height: 85%;
+  background-color: white;
+  border-radius: 40px;
+}
