--- a/assets/templates/add-task-template.html
+++ b/assets/templates/add-task-template.html
@@ -19,7 +19,7 @@
   <div id="close-button-add-task" class="close-button-add-task d-none" onclick="closeWindow()"><img src="../assets/img/close-button.svg" alt=""></div>
   </div>
   
-    <form action="" id="task-form">
+    <form action="board.html" id="task-form">
       <div class="add-task-forms">
         <div class="first-form">
           <div>
@@ -239,7 +239,7 @@
             id="create-task-button"
             class="create-button"
             type="button"
-            onclick="createTask('toDo')"
+            onclick="createTask()"
           >
             Create a Task <img src="../assets/img/check.svg" alt="" />
           </button>
