--- a/assets/templates/header-template.html
+++ b/assets/templates/header-template.html
@@ -3,5 +3,6 @@
     <div class="header-buttons">
         <!-- Hier kommt der Hilfe-Button und der User-Button rein -->
          <a href="help.html"><img class="help-icon" src="../assets/img/help.svg" alt=""></a>
+         <button class="user-circle" id="userCircle"></button>
     </div>
 </div>
