--- a/styles/sign-up.css
+++ b/styles/sign-up.css
@@ -112,3 +112,54 @@
     transform: scale(1.05);
     transition: 70ms all;
 }
+
+.error-message-sign-up.show {
+    visibility: visible;
+    position: relative;
+    right: 4.8rem;
+    bottom: 0.6rem;
+}
+
+.error-message-sign-up {
+    color: red;
+    font-size: 12px;
+    visibility: hidden;
+    font-family: "Inter", sans-serif;
+}
+
+.img-password {
+    cursor: pointer;
+}
+
+.success-message {
+    display: flex;
+    border: none;
+    position: fixed;
+    top: 15rem;
+    left: 50%;
+    border-radius: 15px;
+    padding: 10px 30px;
+    background-color: #2A3647;
+    transform: translate(-50%);
+    transition: opacity 0.5s ease, bottom 0.5s ease;
+    z-index: 1000;
+    opacity: 0;
+}
+
+.success-message h2 {
+    text-align: center;
+    color: white;
+    font-size: 20px;
+    font-family: "Inter", sans-serif;
+    line-height: 25.2px;
+    font-weight: 400;
+}
+
+.success-message.show {
+    display: flex;
+    opacity: 1;
+}
+
+.d-none {
+    display: none;
+}
