--- a/assets/templates/header-template.html
+++ b/assets/templates/header-template.html
@@ -1,8 +1,15 @@
 <div class="header-content">
     Kanban Project Management Tool
-    <div class="header-buttons">
+    <div class="header-buttons" id="headerContainer">
         <!-- Hier kommt der Hilfe-Button und der User-Button rein -->
          <a href="help.html"><img class="help-icon" src="../assets/img/help.svg" alt=""></a>
-         <button class="user-circle" id="userCircle"></button>
+         <button class="user-circle" id="userCircle" onclick="buttonUser()"></button>
+         <div class="user-menu" id="userMenu">
+            <ul>
+                <li class="user-menu-container"><a href="/html/legal-notice.html">Legal Notice</a></li>
+                <li class="user-menu-container"><a href="/html/privacy-policy.html">Privacy Policy</a></li>
+                <li class="user-menu-container" onclick="logOut()">Log out</li>
+            </ul>
+         </div>
     </div>
 </div>
