--- a/styles/add-task.css
+++ b/styles/add-task.css
@@ -7,6 +7,10 @@
     margin-bottom: 48px;
 }
 
+.main-add-task{
+    overflow-y: hidden;
+}
+
 .first-form{
     display: flex;
     flex-direction: column;
@@ -427,7 +431,7 @@ line-height: 24px;
     height: 74px;
     border-radius: 20px;
     box-shadow: 0px 0px 4px 0px #00000026;
-    position: absolute;
+    position: relative;
     bottom: 0;
     left: 0;
     right: 0;
