worked on edit task design

--- a/styles/dialog.css
+++ b/styles/dialog.css
@@ -54,7 +54,7 @@
 }
 
 .color-grey {
-  color: #42526E;
+  color: #42526e;
 }
 
 .board-task-dialog {
@@ -84,6 +84,11 @@
 
 .board-task-dialog-close-button {
   position: inherit !important;
+}
+
+.board-task-dialog-description {
+  overflow-wrap: break-word;
+  word-wrap: break-word;
 }
 
 .board-task-dialog-priority {
