worked on design

--- a/assets/templates/add-task-template.html
+++ b/assets/templates/add-task-template.html
@@ -19,7 +19,7 @@
   <div id="close-button-add-task" class="close-button-add-task d-none" onclick="closeWindow()"><img src="../assets/img/close-button.svg" alt=""></div>
   </div>
   
-    <form action="board.html" id="task-form">
+    <form class="form-add-task" action="board.html" id="task-form">
       <div class="add-task-forms">
         <div class="first-form">
           <div>
